# ir_measurement

./: .gitignore  README.md  Visualize RIR.ipynb  _parseargs.py  checkLastRec.py  deconvolution.py  main.py  parser.py  pyproject.toml  recording.py  rir_argparser.py  settings.py  sine_sweep.py  stimulus copy.py  stimulus.py  utils.py
.ipynb_checkpoints/: Visualize RIR-checkpoint.ipynb
_data/: config.json  defaults.json
notebooks/: Visualize RIR.ipynb
